--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -5,6 +5,11 @@ body, p, ol, ul, td {
   font-size:   13px;
   line-height: 18px;
 }
+#content{
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
 
 pre {
   background-color: #eee;
