--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -21,6 +21,21 @@ font-weight:bold;
 padding: 0.5em;
 }
 
+#nav li {
+list-style-type:none;
+}
+
+th, td {
+  padding-left:0.5em;
+  padding-right:0.5em;
+}
+
+.action{
+  
+  padding-left:0.2em;
+  padding-right:0.2em;
+}
+
 pre {
   background-color: #eee;
   padding: 10px;
